test_suite/alan-2022-examples/failing/007040_mutation.alan
source j begin put 4 boolean end
